--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>Instel's Source</title>
+<title>Instel's Hub</title>
 <link rel="icon" type="image/x-icon" href="Images/icon.png">
 <link rel="stylesheet" href="style.css">
 <img class="banner" src="Images/banner.png">
